--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,21 @@
-<div class="container-scroller">
+<ng-container *ngIf="isLoginPage; else mainLayout">
+    <router-outlet></router-outlet>
+</ng-container>
 
-    <app-header></app-header>
-    
-    <div class="container-fluid page-body-wrapper">
-        
-        <app-sidebar></app-sidebar>
-        
-        <div class="main-panel">
+<ng-template #mainLayout>
+    <div class="container-scroller">
+        <app-header></app-header>
 
-            <div class="content-wrapper">
-                
-                <router-outlet></router-outlet>
+        <div class="container-fluid page-body-wrapper">
+            <app-sidebar></app-sidebar>
 
+            <div class="main-panel">
+                <div class="content-wrapper">
+                    <router-outlet></router-outlet> <!-- Affichage des autres pages -->
+                </div>
+
+                <app-footer></app-footer>
             </div>
-            
-            <app-footer></app-footer>
-
         </div>
-
     </div>
-
-</div>
+</ng-template>
