--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
         <li class="nav-item">
             <a class="nav-link" href="/gestion-garage">
                 <i class="bi bi-building menu-icon"></i>
-                <span class="menu-title">Gestion des garages</span>
+                <span class="menu-title">Gestion des garages</span> 
             </a>
         </li>
         <li class="nav-item">
@@ -30,6 +30,20 @@
                     <li class="nav-item"> <a class="nav-link" href="/employe-present">Présence ce jour</a></li>
                 </ul>
             </div>
+        </li>
+
+        <!-- Mecanicien  -->
+        <li class="nav-item">
+            <a class="nav-link" href="/gestion-reparation">
+                <i class="bi-wrench menu-icon"></i>
+                <span class="menu-title">Gestion des réparations</span> 
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/gestion-tache">
+                <i class="bi bi-list-check menu-icon"></i>
+                <span class="menu-title">Gestion des tâches</span> 
+            </a>
         </li>
     </ul>
 </nav>
