--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,12 +1,11 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="accueil">
-            <a class="nav-link" href="/">
+            <a class="nav-link" href="/dashboard">
                 <i class="icon-grid menu-icon"></i>
                 <span class="menu-title">Tableau de bord</span>
             </a>
-        <!-- </li> -->
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="/gestion-service">
                 <i class="bi bi-tools menu-icon"></i>
@@ -20,9 +19,6 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="rendezvous">
-                <i class="icon-paper menu-icon"></i>
-                <span class="menu-title">Rendez-vous</span>
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                 <i class="bi bi-person-gear menu-icon"></i>
                 <span class="menu-title">Gestion des employés</span>
@@ -34,8 +30,8 @@
                     <li class="nav-item"> <a class="nav-link" href="/employe-present">Présence ce jour</a></li>
                 </ul>
             </div>
-        <!-- </li> -->
-
+        </li>
+        
         <!-- Mecanicien  -->
         <li class="nav-item">
             <a class="nav-link" href="/gestion-reparation">
@@ -49,5 +45,5 @@
                 <span class="menu-title">Gestion des tâches</span> 
             </a>
         </li>
-    <!-- </ul> -->
-<!-- </nav> -->
+    </ul>
+</nav>
