--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 
             <div class="main-panel">
                 <div class="content-wrapper">
-                    <router-outlet></router-outlet> <!-- Affichage des autres pages -->
+                    <router-outlet></router-outlet>
                 </div>
 
                 <app-footer></app-footer>
